--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<h1>Sveiki Atvykę į 𝑀𝒶𝓉o portfelį<br />
 						</h1>
 
-		<a href="https://mugdass.github.io/lithuanianmain.github.io/#pagrindinis.html">
+		<a href="https://mugdass.github.io/lithuanianmain.github.io/#index.html">
 										<img alt="Qries" src="ltflag.png.svg"
 										width30" height="30">
 									 </a>
@@ -72,7 +72,7 @@
 						<ul class="links">
 							<div class="topnav">
 	
-				<a class="button" href="https://mugdass.github.io/lithuanianmain.github.io/#pagrindinis.html">Pagrindinis Puslapis</a>
+				<a class="button" href="https://mugdass.github.io/lithuanianmain.github.io/#index.html">Pagrindinis Puslapis</a>
 
 				<a href="https://mugdass.github.io/lithuanianmain.github.io/apiemane.html" class="button">Apie Autoriu</a>
 
